fix styles to wrap board elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,28 @@
-body {
+* {
+    box-sizing: border-box;
+}
+
+body, 
+#app {
     width: 100%;
     height: 100vh;
 }
 
-#app {
-width: 60%;
-height: 90%;
-margin: 20px;
-} 
+.board {
+    width: 60%;
+    height: 90%;
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: lightgray;
+}
 
-#app div {
+.board div {
     width: 10%;
     height: 10%;
-    border: 1px solid royalblue;
+}
+
+.board .player {
+    background-color: blue;
+    border-radius: 8px;
 }
